--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Prerequisites
-*.d
+.idea/
+*build*/
 
 # Compiled Object files
 *.slo
@@ -7,18 +7,10 @@
 *.o
 *.obj
 
-# Precompiled Headers
-*.gch
-*.pch
-
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
-
-# Fortran module files
-*.mod
-*.smod
 
 # Compiled Static libraries
 *.lai
