delete redundant files done: take a screenshot and show it on GridView with other necessary info

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -10,3 +10,4 @@ set(APP_SRC
 QT5_ADD_RESOURCES(RSCS ${RSC})
 add_executable(${PROJECT_NAME} ${APP_SRC} ${RSCS})
 target_link_libraries(${PROJECT_NAME} core)
+target_include_directories(${PROJECT_NAME} PRIVATE ../core)
